--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+            background: linear-gradient(135deg, #000000 0%, #2d2d2d 100%);
             color: white;
             padding: 1rem 0;
             position: fixed;
@@ -37,7 +37,7 @@
             padding: 0 2rem;
         }
 
-        .logo {
+        /* .logo {
             font-size: 1.8rem;
             font-weight: bold;
             letter-spacing: 2px;
@@ -45,7 +45,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-        }
+        } */
 
         nav ul {
             list-style: none;
@@ -279,6 +279,10 @@
             text-align: center;
             padding: 2rem;
         }
+        .logo{
+            width: 120px;
+            height: 100px;
+        }
 
         @media (max-width: 768px) {
             .hero-content h1 {
@@ -294,17 +298,20 @@
                 font-size: 0.9rem;
             }
 
-            .logo {
-                font-size: 1.3rem;
-            }
+             .logo{
+            width: 80px;
+            height: 70px;
+            margin-right: 10px;
+        }
+
         }
     </style>
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">
-                AJ GLOBAL
+            <div class="logo-container">
+                <a href="#home"><img src="images/logo.jpg" alt="Logo" class="logo"></a>
 
             </div>
             <ul>
