--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background: linear-gradient(135deg, #000000 0%, #2d2d2d 100%);
+            background: #000000;
             color: white;
             padding: 1rem 0;
             position: fixed;
@@ -36,16 +36,6 @@
             align-items: center;
             padding: 0 2rem;
         }
-
-        /* .logo {
-            font-size: 1.8rem;
-            font-weight: bold;
-            letter-spacing: 2px;
-            background: linear-gradient(45deg, #f39c12, #e74c3c);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        } */
 
         nav ul {
             list-style: none;
@@ -279,31 +269,89 @@
             text-align: center;
             padding: 2rem;
         }
-        .logo{
+
+        .logo {
             width: 120px;
             height: 100px;
+            object-fit: contain;
         }
 
+        .logo-container {
+            display: flex;
+            align-items: center;
+        }
+
+        /* Tablet Responsive */
         @media (max-width: 768px) {
             .hero-content h1 {
                 font-size: 2rem;
+                padding: 0 1rem;
             }
 
             .hero-content p {
                 font-size: 1rem;
+                padding: 0 1rem;
+            }
+
+            nav {
+                padding: 0 1rem;
             }
 
             nav ul {
-                gap: 1rem;
+                gap: 0.8rem;
+                font-size: 0.85rem;
+            }
+
+            .logo {
+                width: 70px;
+                height: 60px;
+            }
+
+            h2 {
+                font-size: 2rem;
+            }
+
+            section {
+                padding: 3rem 1rem;
+            }
+
+            .cta-button {
+                padding: 0.8rem 1.8rem;
+                font-size: 1rem;
+            }
+        }
+
+        /* Mobile Responsive */
+        @media (max-width: 480px) {
+            .hero-content h1 {
+                font-size: 1.5rem;
+            }
+
+            .hero-content p {
                 font-size: 0.9rem;
             }
 
-             .logo{
-            width: 80px;
-            height: 70px;
-            margin-right: 10px;
-        }
+            nav ul {
+                gap: 0.5rem;
+                font-size: 0.75rem;
+            }
 
+            .logo {
+                width: 60px;
+                height: 50px;
+            }
+
+            .car-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .features {
+                grid-template-columns: 1fr;
+            }
+
+            .contact-info {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
@@ -312,19 +360,16 @@
         <nav>
             <div class="logo-container">
                 <a href="#home"><img src="images/logo.jpg" alt="Logo" class="logo"></a>
-
             </div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#inventory">Inventory</a></li>
-               <!-- <li><a href="#about">About</a></li>-->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="home" class="hero">
-        <!-- REPLACE 'YOUR-VIDEO-FILE.mp4' WITH YOUR ACTUAL VIDEO FILE PATH -->
         <video autoplay muted loop playsinline class="hero-video">
             <source src="honda crv.mp4" type="video/mp4">
         </video>
@@ -365,7 +410,6 @@
     <section id="inventory" class="inventory">
         <h2>Featured Inventory</h2>
         <div class="car-grid">
-            <!-- CAR 1 - REPLACE 'car1.jpg' WITH YOUR IMAGE PATH -->
             <div class="car-card">
                 <img src="images/2023 toyota camry.jpg" alt="2023 Toyota Camry" class="car-image">
                 <div class="car-details">
@@ -380,7 +424,6 @@
                 </div>
             </div>
 
-            <!-- CAR 2 - REPLACE 'car2.jpg' WITH YOUR IMAGE PATH -->
             <div class="car-card">
                 <img src="images/honda crv.jpg" alt="2022 Honda CR-V" class="car-image">
                 <div class="car-details">
@@ -395,7 +438,6 @@
                 </div>
             </div>
 
-            <!-- CAR 3 - REPLACE 'car3.jpg' WITH YOUR IMAGE PATH -->
             <div class="car-card">
                 <img src="images/2024 BMW.png" alt="2024 BMW 3 Series" class="car-image">
                 <div class="car-details">
@@ -410,7 +452,6 @@
                 </div>
             </div>
 
-            <!-- CAR 4 - REPLACE 'car4.jpg' WITH YOUR IMAGE PATH -->
             <div class="car-card">
                 <img src="images/2023 Mercedes-Benz.png" alt="2023 Mercedes-Benz GLE" class="car-image">
                 <div class="car-details">
@@ -425,7 +466,6 @@
                 </div>
             </div>
 
-            <!-- CAR 5 - REPLACE 'car5.jpg' WITH YOUR IMAGE PATH -->
             <div class="car-card">
                 <img src="images/2023 Nissan Altima.png" alt="2023 Nissan Altima" class="car-image">
                 <div class="car-details">
@@ -440,7 +480,6 @@
                 </div>
             </div>
 
-            <!-- CAR 6 - REPLACE 'car6.jpg' WITH YOUR IMAGE PATH -->
             <div class="car-card">
                 <img src="images/2024 Ford Explorer.png" alt="2024 Ford Explorer" class="car-image">
                 <div class="car-details">
@@ -513,9 +552,11 @@
             const currentScroll = window.pageYOffset;
             
             if (currentScroll > 100) {
-                header.style.background = 'rgba(26, 26, 26, 0.95)';
+                header.style.background = '#000000';
+                header.style.boxShadow = '0 4px 15px rgba(0,0,0,0.5)';
             } else {
-                header.style.background = 'linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%)';
+                header.style.background = '#000000';
+                header.style.boxShadow = '0 2px 10px rgba(0,0,0,0.3)';
             }
             
             lastScroll = currentScroll;
